--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <div class="container">
         <div class="main-content">
             <h2>About Me</h2>
-            <p>I'm an Integration Engineer with expertise in Azure services...</p>
+            <p>Seasoned Data Engineer with hands-on experience in Azure services like Azure Data Factory (ADF), Azure Databricks, Azure Synapse Analytics, Azure Function App, SQL, Python, and Spark. 
+                I specialize in designing, implementing, and optimizing data solutions on the Azure platform, leveraging these tools to create scalable and efficient data pipelines,
+                 perform data transformations, and drive valuable insights from data.</p>
             <h2>Projects</h2>
             <ul>
                 <li>Project 1: Description of your project.</li>
