--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <!-- About Section -->
         <section id="about" class="main-content">
             <h2>About Me</h2>
+            <img src="images/profile.jpg" alt="Saurav Kumar" style="width:150px; border-radius: 50%; display: block; margin: 20px auto;">
             <p>Hello! I am Saurav Kumar, a versatile professional with expertise in both Data Engineering and Integration Engineering. I specialize in Azure services and have extensive experience in creating scalable, secure, and efficient solutions on the Azure platform.</p>
         </section>
 
