--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							With two years of hands-on experience.
 						</p>
 						<div class="custom-btn-group mt-4"> 
-							<a target="about:blank" rel="noreferrer noopener" href="Atanu%27s%20Resume.pdf" download class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a> 
+							<a target="about:blank" rel="noreferrer noopener" href="Saurav Kumar (1).pdf" download class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a> 
 						<!--	<a target="about:blank" rel="noreferrer noopener" href="./Atanu's CoverLetter.pdf" download class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Cover Letter</a> -->
 						</div>
 					</div>
@@ -160,7 +160,7 @@
 				</div>
 					<div class="col-lg-6 col-12">
 						<a href="https://www.linkedin.com/in/saurav-kumar-3197a1a5/" target="about:blank" rel="noreferrer noopener"><img width="12%" src="images/logos/linkedin.webp"></a>
-						<a href="https://github.com/heyatanu" target="about:blank" rel="noreferrer noopener"><img width="12%" src="images/logos/github.png"></a>
+						<a href="https://github.com/saurav-singh-sisodiya" target="about:blank" rel="noreferrer noopener"><img width="12%" src="images/logos/github.png"></a>
 						<a href="mailto:sauravkumarrajjoli@gmail.com" target="about:blank" rel="noreferrer noopener"><img width="12%" src="images/logos/mail.webp"></a>
 					</div>
 			</div>
@@ -572,8 +572,7 @@
 			<div class="row">
 				<div class="col-lg-5 mr-lg-5 col-12">
 					<div class="google-map w-100">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14684.229256088938!2d86.65258167083053!3d23.058360257774424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f64155152d9739%3A0x2c70d36879a6e9c!2sManbazar%2C%20West%20Bengal%20723131!5e0!3m2!1sen!2sin!4v1611938337566!5m2!1sen!2sin" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-					</div>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14234.393990023087!2d81.02703325946375!3d26.88449457662094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399be27936df3fa1%3A0x529e8a675a755fc9!2sMatiyari%2C%20Kamta%2C%20Lucknow%2C%20Uttar%20Pradesh%20226028!5e0!3m2!1sen!2sin!4v1724675060380!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>					</div>
 					<div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
 						<div class="contact-info-item">
 							<h3 class="mb-3 text-white">Say hello</h3>
@@ -581,7 +580,7 @@
 							<p><a target="about:blank" rel="noreferrer noopener" href="mailto:sauravkumarrajjoli@gmail.com">sauravkumarrajjoli@gmail.com</a></p>
 						</div>
 						<ul class="social-links">
-							<li><a target="about:blank" rel="noreferrer noopener" href="https://github.com/heyatanu" data-placement="left" title="Github"><i class="fa-1x fa fa-github" aria-hidden="true"></i></a></li>
+							<li><a target="about:blank" rel="noreferrer noopener" href="https://github.com/saurav-singh-sisodiya" data-placement="left" title="Github"><i class="fa-1x fa fa-github" aria-hidden="true"></i></a></li>
 							<li><a target="about:blank" rel="noreferrer noopener" href="https://api.whatsapp.com/send?phone=917766074592" data-placement="left" title="Whatsapp"><i class="fa-1x fa fa-whatsapp" aria-hidden="true"></i></a></li>
 							<li><a target="about:blank" rel="noreferrer noopener" href="https://www.instagram.com/hey_atanu/" data-placement="left" title="Instagram"><i class="fa-1x fa fa-instagram" aria-hidden="true"></i></a></li>
 						</ul>
