--- a/index.html
+++ b/index.html
@@ -80,38 +80,169 @@
 			</div>
 		</div>
 	</section>
-	<!-- CERTIFICATES -->
-	<section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="certificates">
-		<div class="container">
-			<h2 class="mb-4">Certified with,</h2>
-			<div class="row">
-					<div class="col-lg-3 col-6">
-						<a href="https://learn.microsoft.com/api/credentials/share/en-us/atanu/27538DCCA8FA84B5?sharingId=A87C04B3CA060F73" target="about:blank" rel="noreferrer noopener">
-							<img width="35%" src="images/certificates/microsoft-certified-associate-badge.svg">
-						</a>
-						<h5>Microsoft Certified: Azure Data Engineer Associate <a target="about:blank" rel="noreferrer noopener" href="https://learn.microsoft.com/api/credentials/share/en-us/atanu/27538DCCA8FA84B5?sharingId=A87C04B3CA060F73">&#10004;</a></h5>
-					</div>
-					<!-- <div class="col-lg-3 col-6">
-						<a href="https://credentials.databricks.com/embed/f0de467c-7744-4c4a-afbb-d22eb34105c3" target="about:blank" rel="noreferrer noopener">
-							<img width="25%" src="images/certificates/Databricks%20Certified%20Data%20Engineer%20Associate.png">
-						</a>
-						<h5>Databricks Certified Data Engineer Associate</small> <a target="about:blank" rel="noreferrer noopener" href="https://credentials.databricks.com/embed/f0de467c-7744-4c4a-afbb-d22eb34105c3">&#10004;</a></h5>
-					</div>
-					<div class="col-lg-3 col-6">
-						<a href="https://learn.microsoft.com/api/credentials/share/en-us/atanu/7E52617833E6E0C0?sharingId=A87C04B3CA060F73" target="about:blank" rel="noreferrer noopener">
-							<img width="35%" src="images/certificates/microsoft-certified-fundamentals-badge%20(1).svg">
-						</a>
-						<h5>Microsoft Certified: Azure Fundamentals <a target="about:blank" rel="noreferrer noopener" href="https://learn.microsoft.com/api/credentials/share/en-us/atanu/7E52617833E6E0C0?sharingId=A87C04B3CA060F73">&#10004;</a></h5>
-					</div>
-					<div class="col-lg-3 col-6">
-						<a href="https://learn.microsoft.com/api/credentials/share/en-us/atanu/84525F1216DC22BC?sharingId=A87C04B3CA060F73" target="about:blank" rel="noreferrer noopener">
-							<img width="35%" src="images/certificates/microsoft-certified-fundamentals-badge.svg">
-						</a>
-						<h5>Microsoft Certified: Azure Data Fundamentals</small> <a target="about:blank" rel="noreferrer noopener" href="https://learn.microsoft.com/api/credentials/share/en-us/atanu/84525F1216DC22BC?sharingId=A87C04B3CA060F73">&#10004;</a></h5>
-					</div> -->
+<!-- CERTIFICATES -->
+<section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="certificates">
+    <div class="container">
+        <h2 class="mb-4">Certified with,</h2>
+        <div class="row">
+            <div class="col-lg-3 col-6">
+                <a href="https://learn.microsoft.com/api/credentials/share/en-us/atanu/27538DCCA8FA84B5?sharingId=A87C04B3CA060F73" target="_blank" rel="noreferrer noopener">
+                    <img width="35%" src="images/certificates/microsoft-certified-associate-badge.svg">
+                </a>
+                <h5>Microsoft Certified: Azure Data Engineer Associate <a target="_blank" rel="noreferrer noopener" href="https://learn.microsoft.com/api/credentials/share/en-us/atanu/27538DCCA8FA84B5?sharingId=A87C04B3CA060F73">&#10004;</a></h5>
+            </div>
+            <!-- <div class="col-lg-3 col-6">
+                <a href="https://credentials.databricks.com/embed/f0de467c-7744-4c4a-afbb-d22eb34105c3" target="_blank" rel="noreferrer noopener">
+                    <img width="25%" src="images/certificates/Databricks%20Certified%20Data%20Engineer%20Associate.png">
+                </a>
+                <h5>Databricks Certified Data Engineer Associate <a target="_blank" rel="noreferrer noopener" href="https://credentials.databricks.com/embed/f0de467c-7744-4c4a-afbb-d22eb34105c3">&#10004;</a></h5>
+            </div>
+            <div class="col-lg-3 col-6">
+                <a href="https://learn.microsoft.com/api/credentials/share/en-us/atanu/7E52617833E6E0C0?sharingId=A87C04B3CA060F73" target="_blank" rel="noreferrer noopener">
+                    <img width="35%" src="images/certificates/microsoft-certified-fundamentals-badge%20(1).svg">
+                </a>
+                <h5>Microsoft Certified: Azure Fundamentals <a target="_blank" rel="noreferrer noopener" href="https://learn.microsoft.com/api/credentials/share/en-us/atanu/7E52617833E6E0C0?sharingId=A87C04B3CA060F73">&#10004;</a></h5>
+            </div>
+            <div class="col-lg-3 col-6">
+                <a href="https://learn.microsoft.com/api/credentials/share/en-us/atanu/84525F1216DC22BC?sharingId=A87C04B3CA060F73" target="_blank" rel="noreferrer noopener">
+                    <img width="35%" src="images/certificates/microsoft-certified-fundamentals-badge.svg">
+                </a>
+                <h5>Microsoft Certified: Azure Data Fundamentals <a target="_blank" rel="noreferrer noopener" href="https://learn.microsoft.com/api/credentials/share/en-us/atanu/84525F1216DC22BC?sharingId=A87C04B3CA060F73">&#10004;</a></h5>
+            </div> -->
+        </div>
+    </div>
+</section>
 
+<!-- SKILLS -->
+<section class="py-5" id="skill">
+    <div class="container">
+        <div class="position-relative d-flex align-items-center justify-content-center">
+			<br>
+            <!-- <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Skills</h1> -->
+            <h1 class="position-absolute text-uppercase text-primary">Skills</h1>
+        </div>
+		<br>
+        <div class="position-relative d-flex align-items-center justify-content-center">
+            <br><h3>Application Development & Scripting</h3><br><br><br>
+        </div>
+
+        <div class="row align-items-center">
+            <div class="col-sm"><a href="https://www.python.org/" target="_blank">
+                <img style="height: 110px; width:130px" src="img/skills/AZURE (2).webp"></a>
+            </div>
+            <div class="col-sm"><a href="https://www.java.com/en/" target="_blank">
+                <img style="height: 100px; width:80px" src="img/skills/java.png"></a>
+            </div>
+            <div class="col-sm"><a href="https://www.djangoproject.com/" target="_blank">
+                <img style="height: 100px; width:100px" src="img/skills/django.png"></a>
+            </div>
+            <div class="col-sm"><a href="https://flask.palletsprojects.com/en/2.2.x/" target="_blank">
+                <img style="height: 100px; width:80px" src="img/skills/flask.png"></a>
+            </div>
+            <div class="col-sm"><a>
+                <img style="height: 100px; width:100px" src="img/skills/react.png"></a>
+            </div>
+            <div class="col-sm"><a href="https://flutter.dev/" target="_blank">
+                <img style="height: 100px; width:80px" src="img/skills/javascript.png"></a>
+            </div>
+            <div class="col-sm"><a>
+                <img style="height: 100px; width:100px" src="img/skills/html.png"></a>
+            </div>
+            <br><br><br><br>
+        </div>
+
+        <br><br><br><br>
+        <div class="position-relative d-flex align-items-center justify-content-center">
+            <br><h3>Cloud & DevOps</h3><br>
+        </div>
+        <div class="row align-items-center mt-3">
+            <div class="col-sm"><a href="https://aws.amazon.com/" target="_blank">
+                <img style="height: 80px; width:130px" src="img/skills/BIG Data.webp"alt="Logic Apps">
+			</a>
+			<!-- <div class="icon-label">Big Data</div> -->
+            </div>
+			<div class="col-sm text-center">
+				<a href="https://azure.microsoft.com/" target="_blank">
+					<img style="height: 80px; width:130px" src="img/skills/Logic-Apps.svg" alt="Logic Apps">
+				</a>
+				<div class="icon-label">Logic Apps</div>
 			</div>
-		</div>
+			
+
+		<!-- CSS for label -->
+
+		
+
+            <div class="col-sm"><a href="https://www.docker.com/" target="_blank">
+                <img style="height: 80px; width:120px" src="img/skills/Databricks.webp"></a>
+            </div>
+            <div class="col-sm"><a href="https://kubernetes.io/" target="_blank">
+                <img style="height: 80px; width:130px" src="img/skills/Data Factory.webp"></a>
+            </div>
+            <div class="col-sm"><a href="https://www.terraform.io/" target="_blank">
+                <img style="height: 100px; width:130px" src="img/skills/CICD.webp"></a>
+            </div>
+            <div class="col-sm"><a href="https://aws.amazon.com/lambda/" target="_blank">
+                <img style="height: 100px; width:130px" src="img/skills/Synapse.webp"></a>
+            </div>
+        </div>
+		<br><br><br>
+
+		<div class="row align-items-center mt-3">
+            <div class="col-sm"><a href="https://www.sqltutorial.org/" target="_blank">
+                <img style="height: 100px; width:100px" src="img/skills/sql.png"></a>
+            </div>
+            <div class="col-sm"><a href="https://www.mongodb.com/" target="_blank">
+                <img style="height: 100px; width:130px" src="img/skills/mongo.gif"></a>
+            </div>
+            <div class="col-sm"><a href="https://kafka.apache.org/" target="_blank">
+                <img style="height: 100px; width:130px" src="img/skills/kafka.png"></a>
+            </div>
+            <div class="col-sm"><a href="https://redis.io/" target="_blank">
+                <img style="height: 100px; width:100px" src="img/skills/github.png"></a>
+            </div> 
+            <div class="col-sm"><a href="https://oauth.net/" target="_blank">
+                <img style="height: 100px; width:100px" src="img/skills/oauth.png"></a>
+            </div>
+            <div class="col-sm"><a href="https://www.postman.com/" target="_blank">
+                <img style="height: 80px; width:120px" src="img/skills/postman.webp"></a>
+            </div>   
+            <!-- <div class="col-sm"><a href="https://www.splunk.com/" target="_blank">
+                <img style="height: 100px; width:130px" src="img/skills/splunk.jpg"></a>
+            </div>           -->
+        </div> --
+
+        <!-- <div class="position-relative d-flex align-items-center justify-content-center">
+            <h3><br><br>Other Skills</h3>
+        </div>
+        <div class="row align-items-center mt-3">
+            <div class="col-sm"><a href="https://www.sqltutorial.org/" target="_blank">
+                <img style="height: 100px; width:100px" src="img/skills/sql.png"></a>
+            </div>
+            <div class="col-sm"><a href="https://www.mongodb.com/" target="_blank">
+                <img style="height: 100px; width:130px" src="img/skills/mongo.gif"></a>
+            </div>
+            <div class="col-sm"><a href="https://kafka.apache.org/" target="_blank">
+                <img style="height: 100px; width:130px" src="img/skills/kafka.png"></a>
+            </div>
+            <div class="col-sm"><a href="https://redis.io/" target="_blank">
+                <img style="height: 100px; width:100px" src="img/skills/github.png"></a>
+            </div> 
+            <div class="col-sm"><a href="https://oauth.net/" target="_blank">
+                <img style="height: 100px; width:100px" src="img/skills/oauth.png"></a>
+            </div>
+            <div class="col-sm"><a href="https://www.postman.com/" target="_blank">
+                <img style="height: 80px; width:120px" src="img/skills/postman.webp"></a>
+            </div>   
+            <!-- <div class="col-sm"><a href="https://www.splunk.com/" target="_blank">
+                <img style="height: 100px; width:130px" src="img/skills/splunk.jpg"></a>
+            </div>           -->
+        </div> -->
+        <br><br><br>
+    </div>
+</section>
+
+
 	</section>
 	<section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="Workexpr">
 		<div class="container">
@@ -665,6 +796,31 @@
     });
 </script>
 
+<style>
+	.icon-container {
+		text-align: start; /* Center align icon and label */
+		margin-bottom: 20; /* Adds space between icons */
+	}
 
+	.icon-image {
+		display: block;
+		margin: 0 auto; /* Center the image horizontally */
+		height: 80px;
+		width: 140px;
+	}
+
+	.icon-label {
+		display: block; /* Makes sure label is on its own line */
+		font-size: 14px;
+		font-weight: bold;
+		color: var(--label-color, #000); /* Default to black text */
+		margin-top: 8px; /* Adds space between the icon and the label */
+		transition: color 0.3s ease;
+	}
+
+	body.dark-mode .icon-label {
+		color: var(--label-color-dark, #f9f7fe); /* Changes text color to white in dark mode */
+	}
+</style>
 <!-- Mirrored from heyatanu.github.io/me/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Aug 2024 05:27:22 GMT -->
 </html>
