skill image done

--- a/index.html
+++ b/index.html
@@ -112,6 +112,133 @@
         </div>
     </div>
 </section>
+<!-- SKILLS -->
+<!-- SKILLS -->
+<section class="py-5" id="skill">
+    <div class="container">
+        <!-- Section Title -->
+        <div class="position-relative d-flex align-items-center justify-content-center mb-4">
+            <h1 class="position-absolute text-uppercase text-primary">Skills</h1>
+        </div>
+
+        <!-- Application Development & Scripting Section -->
+        <div class="text-center mb-4">
+            <h3>Application Development & Scripting</h3>
+        </div>
+        <div class="row text-center">
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://www.python.org/" target="_blank">
+                    <img class="skill-img" src="img/skills/AZURE (2).webp" alt="Python">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://www.java.com/en/" target="_blank">
+                    <img class="skill-img" src="img/skills/java.png" alt="Java">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://www.djangoproject.com/" target="_blank">
+                    <img class="skill-img" src="img/skills/django.png" alt="Django">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://flask.palletsprojects.com/en/2.2.x/" target="_blank">
+                    <img class="skill-img" src="img/skills/flask.png" alt="Flask">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="#">
+                    <img class="skill-img" src="img/skills/react.png" alt="React">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://flutter.dev/" target="_blank">
+                    <img class="skill-img" src="img/skills/javascript.png" alt="JavaScript">
+                </a>
+            </div>
+        </div>
+
+        <!-- Cloud & DevOps Section -->
+        <div class="text-center mb-4">
+            <h3>Cloud & DevOps</h3>
+        </div>
+        <div class="row text-center">
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://aws.amazon.com/" target="_blank">
+                    <img class="skill-img" src="img/skills/BIG Data.webp" alt="AWS">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://azure.microsoft.com/" target="_blank">
+                    <img class="skill-img" src="img/skills/Logic-Apps.svg" alt="Logic Apps">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://www.docker.com/" target="_blank">
+                    <img class="skill-img" src="img/skills/Databricks.webp" alt="Docker">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://kubernetes.io/" target="_blank">
+                    <img class="skill-img" src="img/skills/Data Factory.webp" alt="Kubernetes">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://www.terraform.io/" target="_blank">
+                    <img class="skill-img" src="img/skills/CICD.webp" alt="Terraform">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://aws.amazon.com/lambda/" target="_blank">
+                    <img class="skill-img" src="img/skills/Synapse.webp" alt="AWS Lambda">
+                </a>
+            </div>
+        </div>
+
+        <!-- Additional Skills Section -->
+        <div class="row text-center">
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://www.sqltutorial.org/" target="_blank">
+                    <img class="skill-img" src="img/skills/sql.png" alt="SQL">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://www.mongodb.com/" target="_blank">
+                    <img class="skill-img" src="img/skills/mongo.gif" alt="MongoDB">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://kafka.apache.org/" target="_blank">
+                    <img class="skill-img" src="img/skills/kafka.png" alt="Kafka">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://redis.io/" target="_blank">
+                    <img class="skill-img" src="img/skills/github.png" alt="GitHub">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://oauth.net/" target="_blank">
+                    <img class="skill-img" src="img/skills/oauth.png" alt="OAuth">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-4">
+                <a href="https://www.postman.com/" target="_blank">
+                    <img class="skill-img" src="img/skills/postman.webp" alt="Postman">
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- CSS to Control Image Sizes -->
+<style>
+    .skill-img {
+        max-width: 80%;
+        max-height: 100px;
+        object-fit: contain; /* Ensures the image scales down proportionally without cropping */
+    }
+</style>
 
 
 
